# sa4cob2db

./: .classpath  .gitignore  .project  HowToConf.html  Makefile.in  ProjectHome.md  README.md  build.gradle  build.xml  call_javah.sh  configure  configure.ac  settings.gradle
Dll/: Dll.vcxproj  Dll.vcxproj.filters  acmclient.c  acmclient.h  getJNIOption.c  jniclient.c  jniclient.h
WebSamples/: .project  build.xml  index.jsp  result.jsp
WebSamples/WEB-INF/: web.xml
WebSamples/src/: environment.properties
cobs/: ACMCONSTS.CBL  Makefile
command/: Makefile.in  acm2seq.c  cob2meta.c  cobpp.c  configure  configure.ac  getJNIOption.c  getJNIOption.h  libacm2seq.c  libcob2meta.c  libcobpp.c  libmeta2sql.c  libseq2acm.c  libsqlnetserver.c  meta2sql.c  sqlnetserver.c
conf/: acmlogsetting.properties  metafile.dtd  metafile.xml  password.properties
cs/: Makefile  Makefile.in  acmclient.c  acmclient.h  configure  configure.ac  getJNIOption.h  jniclient.c  jniclient.h
docs/: Directions.html  HowToConf.html  HowToConf_JP.html  HowToUse.html  HowToUse_JP.html  index.html  metafile.dtd
src/k_kim_mg/sa4cob2db/: ACMSession.java  AbstractCobolFile.java  CobolColumn.java  CobolFile.java  CobolFormat.java  CobolIndex.java  CobolRecord.java  CobolRecordException.java  CobolRecordMetaData.java  CobolRecordMetaDataSet.java  DefaultCobolColumn.java  DefaultCobolIndex.java  DefaultCobolRecord.java  DefaultCobolRecordMetaData.java  FileStatus.java  SequencialReadBuffer.java  SequentialReadBuffer.java  package-info.java
src/k_kim_mg/sa4cob2db/admin/: IMinAdmin.java  MinAdmin.java  MinAdminAdapter.java  RemoteShutdown.java  package-info.java
src/k_kim_mg/sa4cob2db/codegen/: COBPP1.java  CobolConsts.java  CobolTokens.java  CodeGenerator.java  CodeGeneratorAdapter.java  CodeGeneratorEvent.java  CodeGeneratorListener.java  FileInfo.java  GeneratorOwner.java  JNICodeGenerator.java  TCPCodeGenerator.java
src/k_kim_mg/sa4cob2db/event/: ACMLengthChangedEvent.java  ACMOptionSetEvent.java  ACMServerEvent.java  ACMServerEventAdapter.java  ACMServerEventListener.java  ACMSessionEvent.java  ACMSessionEventAdapter.java  ACMSessionEventListener.java  CobolFileEvent.java  CobolFileEventAdapter.java  CobolFileEventListener.java  package-info.java
src/k_kim_mg/sa4cob2db/sql/: ACMNetSession.java  ACMSQLJNISession.java  ACMSQLNetSession.java  ACMSQLSession.java  Acm2Seq.java  DBConnector.java  DefaultSQLCobolRecordMetaData.java  DefaultSQLCobolRecordMetaData2.java  SQLCobolColumn.java  SQLCobolRecord.java  SQLCobolRecordMetaData.java  SQLCobolRecordMetaData2.java  SQLCobolRecordMetaDataSet.java  SQLFile.java  SQLFile2.java  SQLFileServer.java  SQLJNIServer.java  SQLNetServer.java  Seq2Acm.java  package-info.java
src/k_kim_mg/sa4cob2db/utils/: COBPP2.java  Cbl2MetaData.java  (+5 more)
tests/: ACMDYNTEST1.cob  ACMSEQTEST.cob  ACMSessionEventAdapterTest.java  ACMWRTTEST.cob  CustomCobolFileTest.java  CustromNodeTest.java  DYNTEST.cob  HankakuZenkaku.java  JNIWRTTEST.cob  JNIWRTTEST2.cob  JNIWRTTEST4.cob  JSampleJniCall1.java  Makefile  NodeReaderPlus1.java  O_RECORD2.cbl  SEQTEST3.cob  TestCobolCall.java  WEB-INF.xml  WRTTEST3.cob  WebInterface1.java  build.xml  createtable.txt  sampleJniCall1.c
tests/cobs/: ACMCONSTS2.CBL  DATATYPES.cbl  DSP_RECORD.cbl  DYNTEST.cob  DYNTEST1.cob  I_RECORD.cbl  I_RECORD2.cbl  I_RECORD3.cbl  LENTEST.cob  MAINTEST.cob  Makefile  OPTTEST.cob  O_RECORD.cbl  O_RECORD2.cbl  SCR_RECORD_RED.cbl  SEQTEST.cob  SEQTEST2.cob  SEQTEST3.cob  SEQTEST4.cob  STTTEST.cob  SUBTEST.cob  TYPESTEST.cob  WRTTEST.cob  WRTTEST2.cob  list.ods
tests/cobs/jni/: Makefile
tests/cobs/tcp/: Makefile
tests/cs/: jSampleJniCall1.h  sampleJniCall1.c
tests/src/: ACMServerEventAdapterTest.java  ACMSessionEventAdapterTest.java  CodeGeneratorAdapterTest.java  CustomCobolFileTest.java  CustomCobolMetaDataTest.java  CustromNodeTest.java  HankakuZenkaku.java  JSampleJniCall1.java  SampleMetaDataSet1.java  TestCobolCall.java
trunk/: HowToConf.html  Makefile.in  build.xml  configure  configure.ac
trunk/WebSamples/: .classpath  build.xml  index.jsp  result.jsp  rmi_index.jsp  rmi_result.jsp
trunk/WebSamples/WEB-INF/: web.xml
trunk/WebSamples/src/: environment.properties
trunk/cobs/: ACMCONSTS.CBL
trunk/command/: Makefile.in  acm2seq.c  acm2seq.h  cob2meta.c  cobpp.c  configure  configure.ac  getJNIOption.c  getJNIOption.h  libacm2seq.c  libcob2meta.c  libcobpp.c  libmeta2sql.c  libseq2acm.c  libsqlnetserver.c  meta2sql.c  seq2acm.c  sqlnetserver.c
trunk/conf/: acmlogsetting.properties  metafile.xml  password.properties  shutdown.conf
trunk/cs/: Makefile.in  acmclient.c  acmclient.h  config.h.in  configure  configure.ac  getJNIOption.c  getJNIOption.h  jniclient.c  jniclient.h
trunk/docs/: Directions.html  HowToConf.html  index.html  metafile.dtd  styles.css
trunk/tests/: ACMCONSTS2.CBL  ACMDYNTEST.cob  ACMIDXTEST.cob  ACMSEQTEST2.cob  ACMSTTTEST.cob  ACMServerEventAdapterTest.java  ACMWRTTEST2.cob  ACMWRTTEST4.cob  CobolFileEventAdapterTest.java  CustomCobolFileTest.java  CustomCobolMetaDataTest.java  IDXTEST.cob  JNIDYNTEST.cob  JNIDYNTEST1.cob  JNIIDXTEST.cob  JNISEQTEST.cob  JNISEQTEST2.cob  JNISTTTEST.cob  O_RECORD.cbl  SCR_RECORD.cbl  STTTEST.cob  SampleMetaDataSet1.java  ServletSampleTool1.java  TESTSUB.COB  WEB-INF.xml  build.xml  createtable.txt
trunk/tests/cobs/: DATATYPES.cbl  DSP_RECORD.cbl  DYNTEST.cob  DYNTEST1.cob  DYNTEST2.cob  IDXTEST.cob  I_RECORD.cbl  I_RECORD3.cbl  LENTEST.cob  MAINTEST.cob  Makefile  OPTTEST.cob  O_RECORD.cbl  SCR_RECORD.cbl  SCR_RECORD_RED.cbl  SEQTEST2.cob  SEQTEST4.cob  SUBTEST.cob  WRTTEST2.cob  WRTTEST3.cob  WRTTEST4.cob
trunk/tests/cs/: JSampleJniCall1.h  Makefile  sampleJniCall1.c
trunk/tests/src/: ACMSessionEventAdapterTest.java  CodeGeneratorAdapterTest.java  CustromNodeTest.java  HankakuZenkaku.java  NodeReaderPlus1.java  WebInterface1.java
trunk/utils/: acm2seq.bash  cobpp1.bash  cobpp2.bash  fix2fix.rb  seq2acm.bash  shutdownACMServer.bash
utils/: acm2seq.bash  cobpp1.bash  fix2free.rb  free2fix.rb  seq2acm.bash  sqlnetserver.bash
(+120 files in other folders)
